# lexo

./: .aiexclude  .gitignore  LICENSE  README.md  ROADMAP.md  biome.json  deploy_to_ec2.sh  deployment.md  docker-compose.prod.yaml.example  docker-compose.prod.yaml.template  docker-compose.yaml  package.json  pnpm-lock.yaml  update_and_restart_docker.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yaml
client/: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Dockerfile  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
client/src/: App.css  App.test.tsx  App.tsx  fonts.css  index.css  main.tsx  types.ts  vite-env.d.ts
client/src/components/: ArchivesModal.css  ArchivesModal.test.tsx  ArchivesModal.tsx  CreditsModal.css  CreditsModal.tsx  ErrorPage.css  ErrorPage.tsx  Game.css  Game.test.tsx  Game.tsx  InstructionsModal.css  InstructionsModal.test.tsx  InstructionsModal.tsx  LoadingPage.test.tsx  LoadingPage.tsx  Modal.css  RackScore.css  (+15 more)
config/: gameRules.yaml  scoring.json  words-full.txt
server/: .dockerignore  .env.prod  .gitignore  Dockerfile  crontab  package.json  pyproject.toml
server/app/: cache.py  crud.py  database.py  logging_config.py  main.py  models.py  puzzle_generator.py  settings.py
server/app/scripts/: generate_puzzles.py
server/app/tests/: conftest.py  test_cache.py  test_crud.py  test_generate_puzzles_script.py  test_main.py  test_puzzle_generator.py
server/config/: game_rules.yaml  words-common.txt
(+70 files in other folders)
