[project]
name = "lexo-server"
version = "0.1.0"
description = "The back-end server for a daily word puzzle game."
readme = "README.md"
license = "MIT"
authors = [{ name = "Jack Brounstein", email = "jack.brounstein@yahoo.com" }]
keywords = ["fastapi", "word-game", "puzzle", "python"]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.35.0",
]

[project.urls]
"Repository" = "https://github.com/madjaqk/lexo"
"Bug Tracker" = "https://github.com/madjaqk/lexo/issues"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "fastapi-cli>=0.0.8",
    "ipython>=9.4.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "native"
